...
    // MARK: - Sidebar

    public enum Sidebar {
        public static let sidebar = "sidebar"
        public static let list = "sidebar.list"
        public static let songs = "sidebar.songs"
        public static let albums = "sidebar.albums"
        public static let artists = "sidebar.artists"
        public static let genres = "sidebar.genres"
        public static let composers = "sidebar.composers"
        public static let recentlyAdded = "sidebar.recentlyAdded"
        public static let recentlyPlayed = "sidebar.recentlyPlayed"
        public static let mostPlayed = "sidebar.mostPlayed"
        public static let history = "sidebar.history"
...
